# qsae

./: .gitignore  Cargo.toml  QSAE-App-Design.md  README.md  build.sh  generate-fixtures.sh
apps/desktop/: index.css  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
apps/desktop/src/: App.tsx  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/permissions/: default.toml
apps/desktop/src-tauri/src/: main.rs  state.rs
apps/desktop/src-tauri/src/commands/: analyze.rs  compress.rs  decompress.rs  inspect.rs  mod.rs
apps/desktop/src/components/: CodecBreakdown.tsx  DropZone.tsx  EntropyHeatmap.tsx  ModeSelector.tsx  ParamSliders.tsx  QuorumChart.tsx
apps/desktop/src/hooks/: useAppContext.ts
apps/desktop/src/pages/: Home.tsx  Progress.tsx  Results.tsx
apps/web-demo/: package.json  vite.config.ts
apps/web-demo/src/: App.tsx  index.html  types.ts
apps/web-demo/src/components/: CodecMap.tsx  EntropyHeatmap.tsx  ParamSliders.tsx  QuorumSignal.tsx  StatsPanel.tsx
apps/web-demo/src/hooks/: useWasm.ts
apps/web-demo/src/pages/: Upload.tsx  Visualizer.tsx
crates/qsae-c/: Cargo.toml  README.md
crates/qsae-c/examples/: Makefile  example.c
crates/qsae-c/include/: libqsae.h
crates/qsae-c/src/: lib.rs
crates/qsae-cli/: Cargo.toml
crates/qsae-cli/src/: main.rs  progress.rs
crates/qsae-cli/src/commands/: compress.rs  decompress.rs  inspect.rs  mod.rs
crates/qsae-core/: Cargo.toml
crates/qsae-core/src/: bench.rs  compressor.rs  decompressor.rs  dispatcher.rs  entropy.rs  error.rs  lib.rs  partitioner.rs  quorum.rs
crates/qsae-core/src/codecs/: ans.rs  bwt.rs  deflate.rs  delta.rs  huffman.rs  lz4.rs  lz77.rs  mod.rs  rle.rs  skip.rs
crates/qsae-core/src/format/: block_table.rs  footer.rs  header.rs  mod.rs  switch_map.rs
crates/qsae-node/: Cargo.toml  README.md  package.json
crates/qsae-node/__test__/: index.spec.mjs
crates/qsae-node/examples/: basic.js  stream.js
crates/qsae-node/src/: lib.rs
crates/qsae-python/: Cargo.toml  README.md  pyproject.toml
crates/qsae-python/examples/: basic.py  batch_compress.py
crates/qsae-python/src/: lib.rs
crates/qsae-python/tests/: test_roundtrip.py
crates/qsae-wasm/: Cargo.toml
crates/qsae-wasm/src/: lib.rs
tests/: roundtrip.rs
