[package]
name = "qsae-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
byteorder = "1.5"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
lz4_flex = { version = "0.11", default-features = false, features = ["safe-encode", "safe-decode"] }
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }
ans = "0.3"
rayon = "1.10"
memmap2 = "0.9"
suffix = "1.2"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
proptest = "1.4"
tempfile = { workspace = true }
