[package]
name = "qsae-python"
version = "0.1.0"
edition = "2021"
authors = ["QSAE Team"]
license = "MIT OR Apache-2.0"

[lib]
name = "qsae_py"
crate-type = ["cdylib"]

[dependencies]
qsae-core = { path = "../qsae-core" }
pyo3 = { version = "0.23", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
