[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "qsae"
version = "0.1.0"
description = "QSAE — Quorum Sensing Adaptive Encoder for Python"
readme = "README.md"
license = { text = "MIT OR Apache-2.0" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: System :: Archiving :: Compression",
]

[project.urls]
Homepage = "https://github.com/qsae/qsae"
Repository = "https://github.com/qsae/qsae"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "qsae"
python-source = "python"
