[package]
name = "qsae-wasm"
version = "0.1.0"
edition = "2021"
authors = ["QSAE Team"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
qsae-core = { path = "../../crates/qsae-core" }
wasm-bindgen = "0.2"
js-sys = "0.3"
# NOTE: ArrayBuffer is in js-sys, not web-sys
# web-sys features are per-type; we only need File/Blob for file handling
web-sys = { version = "0.3", features = [
    "console",
    "File",
    "FileReader",
    "Blob",
    "Worker",
    "DedicatedWorkerGlobalScope",
    "MessageEvent",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"

[dependencies.wasm-bindgen-futures]
version = "0.4"
