[package]
name = "qsae-desktop"
version = "0.1.0"
edition = "2021"
authors = ["QSAE Team"]

[dependencies]
qsae-core = { path = "../../../crates/qsae-core" }
tauri = { version = "2.0", features = ["devtools"] }
tauri-plugin-dialog = "2.0"
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
